# laueimproc

./: .gitignore  LICENSE  README.rst  c_build.py  codemeta.json  pyproject.toml  readthedocs.yaml
.github/workflows/: complete_workflows.yml
doc/: Makefile  api.rst  build_media.sh  conf.py  index.rst  nohup.out
doc/media/: bragg.py  conv_geometry.py  conv_ij_xy.py  geometry_graph.py  lattice_bc.py  reciprocal.py
doc/usage/: conventions.rst  developer.rst  installation.rst  quickstart.rst  supported-python-versions.csv
laueimproc/: __init__.py  __main__.py  c_check.h  common.py  convention.py
laueimproc/classes/: __init__.py  base.py  base_dataset.py  base_diagram.py  dataset.py  diagram.py  image.py  spot.py  tensor.py
laueimproc/clustering/: __init__.py  spot_dist.py
laueimproc/diffraction/: __init__.py  bragg.py  c_metric.c  hkl.py  lattice.py  metric.py  projection.py  reciprocal.py  rotation.py
laueimproc/geometry/: __init__.py  bragg.py  c_metric.c  hkl.py  indexation.py  lattice.py  link.py  metric.py  model.py  projection.py  reciprocal.py  rotation.py  symmetry.py  thetachi.py
laueimproc/geometry/indexation/: __init__.py  nn.py  refine.py  stupid.py
laueimproc/gmm/: __init__.py  c_fit.c  c_gmm.c  c_gmm.h  c_linalg.h  check.py  em.py  fit.py  gauss.py  gmm.py  linalg.py  metric.py
laueimproc/immix/: __init__.py  inter.py  mean.py
laueimproc/improc/: __init__.py  c_find_bboxes.c  c_morpho.c  find_bboxes.py  gmm.py  interp.py  morpho.py  peaks_search.py
laueimproc/improc/spot/: __init__.py  basic.py  c_basic.c  c_extrema.c  c_pca.c  c_spot_apply.h  extrema.py  fit.py  gmm.py  pca.py  rot_sym.py
laueimproc/io/: __init__.py  __main__.py  comp_lm.py  convert.py  download.py  ge.jp2  ge_blanc.jp2  read.py  save_dataset.py  write.py  write_dat.py  write_jp2.py
laueimproc/ml/: __init__.py  c_dist.c  dataset_dist.py  spot_dist.py
laueimproc/nn/: __init__.py  loader.py  train.py  vae_spot_classifier.py
laueimproc/nn/dataaug/: __init__.py  patch.py  scale.py
laueimproc/opti/: __init__.py  c_rois.c  cache.py  comp.py  fit.py  gpu.py  manager.py  memory.py  parallel.py  rois.py  singleton.py
laueimproc/test/: __init__.py  clustering.py  rois.py
laueimproc/testing/: __main__.py  coding_style.py  install.py  run.py
laueimproc/testing/tests/: __init__.py  bragg.py  inter_batch.py  lattice.py  metric.py  projection.py  reciprocal.py  rois.py  rotation.py  set_spots.py
lauepp/: __init__.py
notebook/: .unison..~api_indexing_dataset.ipynb.ceaf1ab5ac8ec56868a174b3a4e33695.unison.tmp  .unison..~spot_filter.ipynb.ceaf1ab5ac8ec56868a174b3a4e33695.unison.tmp  _clust_test.ipynb  api_filter_spots.ipynb  api_indexing_dataset.ipynb  api_init_dataset.ipynb  api_init_diagram.ipynb  clust_test.ipynb  data_persistency.ipynb  fit_gauss.ipynb  fit_gaussians.ipynb  geometry_timing.ipynb  gnomonic.ipynb  gnomonic_projection.ipynb  indexation_autograd.ipynb  init_diagram.ipynb  init_diagrams.ipynb  peak_search.ipynb  peaks_search.ipynb  spot_filter.ipynb  test.ipynb  tricks_and_traps.ipynb  workflow_automatic_spot_segmentation.ipynb  workflow_dataset.ipynb  workflow_indexation.ipynb  workflow_peaksearch_JSM_realdata.ipynb  workflow_spot_filter.ipynb
notebook/.ipynb_checkpoints/: init_diagrams-checkpoint.ipynb  quick_start-checkpoint.ipynb
