[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "laueimproc"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "fabio",
  "matplotlib >= 3.6.0",  # for norm="log"
  "numpy",
  "opencv-contrib-python-headless",
  "psutil",
  "sympy",
  "torch",
  "tqdm",
]
authors = [
  {name = "Robin RICHARD (robinechuca)", email = "serveurpython.oz@gmail.com"},
]
maintainers = [
  {name = "Robin RICHARD (robinechuca)", email = "serveurpython.oz@gmail.com"},
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = [
  "laue",
  "multigrain",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: GPU",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: French",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: torch.Tensor Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
all = [
  "pdoc3",
  "recommonmark",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-rtd-theme",
  "sphinxext-opengraph",
]

[project.urls]
Repository = "https://github.com/BM32ESRF/laueimproc"

[tool.setuptools.packages.find]
where = [""]
exclude = ["doc", "notebook"]

[tool.setuptools.package-data]
"*" = ["*.jp2"]

[tool.setuptools]
py-modules = ["c_build"]

[tool.setuptools.cmdclass]
build_py = "c_build.Build"

[tool.setuptools.dynamic]
version = {attr = "laueimproc.__version__"}
